// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchTradesREST spot 1`] = `
Array [
  Array [
    "https://api.gdax.com:443/products/eth-usd/trades",
  ],
]
`;

exports[`fetchTradesREST spot 2`] = `
Array [
  Array [
    Object {
      "amount": 6.6079,
      "base": "USD",
      "id": "41222229",
      "price": 204.05,
      "quote": "ETH",
      "source": "gdax",
      "timestamp": 1539681436111,
    },
    true,
  ],
  Array [
    Object {
      "amount": 0.0193,
      "base": "USD",
      "id": "41222228",
      "price": 204.05,
      "quote": "ETH",
      "source": "gdax",
      "timestamp": 1539681436111,
    },
    false,
  ],
  Array [
    Object {
      "amount": 0.0066,
      "base": "USD",
      "id": "41222227",
      "price": 204.05,
      "quote": "ETH",
      "source": "gdax",
      "timestamp": 1539681436111,
    },
    false,
  ],
  Array [
    Object {
      "amount": 0.2334,
      "base": "USD",
      "id": "41222226",
      "price": 204.05,
      "quote": "ETH",
      "source": "gdax",
      "timestamp": 1539681430566,
    },
    false,
  ],
]
`;

exports[`fetchTradesWS 1`] = `"no ws"`;

exports[`parseTrade 1`] = `
Object {
  "amount": 0.8124,
  "base": "USD",
  "id": "41222165",
  "price": 203.75,
  "quote": "ETH",
  "source": "gdax",
  "timestamp": 1539680912470,
}
`;

exports[`parseTrade 2`] = `
Object {
  "amount": 1.08247223,
  "base": "USD",
  "id": "41222164",
  "price": 203.81,
  "quote": "ETH",
  "source": "gdax",
  "timestamp": 1539680905248,
}
`;

exports[`parseTrade 3`] = `
Object {
  "amount": 0.08034588,
  "base": "USD",
  "id": "41222163",
  "price": 203.92,
  "quote": "ETH",
  "source": "gdax",
  "timestamp": 1539680897586,
}
`;
